# obsidian-extract

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
resources/: output.css  tailwind.config.js  template.html
src/: main.rs
