[package]
name = "obsidian-extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive", "env"] }
glob = "0.3.1"
regex = "1.7.1"
shellexpand = "3.0.0"
tempfile = "3.3.0"
